--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Photo Gallery</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Photo Gallery</h1>
+    <div class="gallery" id="gallery"></div>
+    <footer>
+        <p>&copy; 2024 Photo Gallery. All rights reserved.</p>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
+
